# MLXServer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  build.sh  project.yml  pyproject.toml  run.sh  test.sh  test_server.py
MLXServer/: ContentView.swift  Info.plist  MLXServerApp.swift
MLXServer.xcodeproj/: project.pbxproj
MLXServer/Commands/: SaveChatCommands.swift  SceneCommands.swift
MLXServer/Documents/: ChatDocumentController.swift  ChatDocumentManifest.swift  ChatDocumentMigration.swift  ChatDocumentPackage.swift
MLXServer/Models/: ChatMessage.swift  ChatScene.swift  GenerationSettings.swift  InferenceStats.swift  ModelConfig.swift
MLXServer/Server/: APIModels.swift  APIServer.swift  CancellationToken.swift  ConversationSessionCache.swift  ImageDecoder.swift  InferenceEngine.swift  PromptBuilder.swift  StreamingSSEEncoder.swift  TokenPrefixCache.swift  ToolCallParser.swift  ToolPromptBuilder.swift
MLXServer/Utilities/: ChatExporter.swift  FocusedValues.swift  LocalModelResolver.swift  Preferences.swift
MLXServer/ViewModels/: ChatViewModel.swift  ModelManager.swift  SceneStore.swift
MLXServer/Views/: ChatInputView.swift  ChatMessagesView.swift  DownloadModalView.swift  GenerationSettingsEditor.swift  ModelManagementView.swift  ModelManagementWindow.swift  ModelPickerView.swift  MonitorView.swift  SceneManagementView.swift  SceneManagementWindow.swift  SceneSelectionView.swift  SettingsView.swift  (+1 more)
docs/: chat-document-plan.md  native-template-tool-formatting-plan.md  session-cache-upgrade.md
mlx_server/: __main__.py  engine.py  main.py  models.py
(+18 files in other folders)
